Fixed to big image size on small mobile

--- a/src/styles/layout/_singleImage.scss
+++ b/src/styles/layout/_singleImage.scss
@@ -75,10 +75,13 @@
   img {
     margin-top: 10px;
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    object-fit:contain;
     max-height: 530px;
     border-radius: 5px;
+    @media (max-width: 575px) {
+      max-height: 485px;
+    }
+  
   }
 
   .location{
